--- a/hw0/hw0.ipynb
+++ b/hw0/hw0.ipynb
@@ -793,7 +793,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -809,12 +809,12 @@
      "text": [
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
       "platform linux -- Python 3.10.13, pytest-7.4.0, pluggy-1.0.0\n",
-      "rootdir: /root/cmu-dlsys/hw0-main\n",
+      "rootdir: /root/cmu-dlsys/hw0\n",
       "collected 6 items / 5 deselected / 1 selected                                  \u001b[0m\n",
       "\n",
       "tests/test_simple_ml.py \u001b[32m.\u001b[0m\u001b[32m                                                [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m5 deselected\u001b[0m\u001b[32m in 0.94s\u001b[0m\u001b[32m ========================\u001b[0m\n"
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m5 deselected\u001b[0m\u001b[32m in 0.76s\u001b[0m\u001b[32m ========================\u001b[0m\n"
      ]
     }
    ],
@@ -828,15 +828,6 @@
    "metadata": {},
    "source": [
     "Note that unlike our code before, we had to actually compile the C++ extension in order to run an test it.  This will be needed whenever there are C++ components of your code, but in all such cases we will include Makefiles that should compile all the relevant functions and include the necessary libraries/headers.  And finally, let's also submit the results to mugrade."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "!python3 -m mugrade submit YOUR_GRADER_KEY_HERE -k \"softmax_regression_epoch_cpp\""
    ]
   },
   {
