feature: finish lab1-q1 & q2

--- a/hw1/hw1.ipynb
+++ b/hw1/hw1.ipynb
@@ -112,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 86,
    "metadata": {},
    "outputs": [
     {
@@ -136,7 +136,7 @@
       "tests/hw1/test_autograd_hw.py::test_negate_forward \u001b[32mPASSED\u001b[0m\u001b[32m                [ 90%]\u001b[0m\n",
       "tests/hw1/test_autograd_hw.py::test_transpose_forward \u001b[32mPASSED\u001b[0m\u001b[32m             [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m====================== \u001b[32m\u001b[1m10 passed\u001b[0m, \u001b[33m14 deselected\u001b[0m\u001b[32m in 0.30s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001b[32m====================== \u001b[32m\u001b[1m10 passed\u001b[0m, \u001b[33m14 deselected\u001b[0m\u001b[32m in 0.31s\u001b[0m\u001b[32m =======================\u001b[0m\n"
      ]
     }
    ],
@@ -264,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 75,
+   "execution_count": 104,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -282,21 +282,25 @@
       "platform linux -- Python 3.10.13, pytest-7.4.0, pluggy-1.0.0 -- /root/miniconda3/envs/cmu-dlsys/bin/python3\n",
       "cachedir: .pytest_cache\n",
       "rootdir: /root/cmu-dlsys/hw1\n",
-      "collected 20 items / 14 deselected / 6 selected                                \u001b[0m\n",
+      "collected 24 items / 14 deselected / 10 selected                               \u001b[0m\n",
       "\n",
-      "tests/hw1/test_autograd_hw.py::test_power_scalar_backward \u001b[32mPASSED\u001b[0m\u001b[32m         [ 16%]\u001b[0m\n",
-      "tests/hw1/test_autograd_hw.py::test_divide_backward \u001b[32mPASSED\u001b[0m\u001b[32m               [ 33%]\u001b[0m\n",
-      "tests/hw1/test_autograd_hw.py::test_divide_scalar_backward \u001b[32mPASSED\u001b[0m\u001b[32m        [ 50%]\u001b[0m\n",
-      "tests/hw1/test_autograd_hw.py::test_matmul_simple_backward \u001b[32mPASSED\u001b[0m\u001b[32m        [ 66%]\u001b[0m\n",
-      "tests/hw1/test_autograd_hw.py::test_broadcast_to_backward \u001b[32mPASSED\u001b[0m\u001b[32m         [ 83%]\u001b[0m\n",
-      "tests/hw1/test_autograd_hw.py::test_summation_backward \u001b[32mPASSED\u001b[0m\u001b[32m            [100%]\u001b[0m\n",
+      "tests/hw1/test_autograd_hw.py::test_power_scalar_backward \u001b[32mPASSED\u001b[0m\n",
+      "tests/hw1/test_autograd_hw.py::test_divide_backward \u001b[32mPASSED\u001b[0m\n",
+      "tests/hw1/test_autograd_hw.py::test_divide_scalar_backward \u001b[32mPASSED\u001b[0m\n",
+      "tests/hw1/test_autograd_hw.py::test_matmul_simple_backward \u001b[32mPASSED\u001b[0m\n",
+      "tests/hw1/test_autograd_hw.py::test_matmul_batched_backward \u001b[32mPASSED\u001b[0m\n",
+      "tests/hw1/test_autograd_hw.py::test_reshape_backward \u001b[32mPASSED\u001b[0m\n",
+      "tests/hw1/test_autograd_hw.py::test_negate_backward \u001b[32mPASSED\u001b[0m\n",
+      "tests/hw1/test_autograd_hw.py::test_transpose_backward \u001b[32mPASSED\u001b[0m\n",
+      "tests/hw1/test_autograd_hw.py::test_broadcast_to_backward \u001b[32mPASSED\u001b[0m\n",
+      "tests/hw1/test_autograd_hw.py::test_summation_backward \u001b[32mPASSED\u001b[0m\n",
       "\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m6 passed\u001b[0m, \u001b[33m14 deselected\u001b[0m\u001b[32m in 0.32s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001b[32m====================== \u001b[32m\u001b[1m10 passed\u001b[0m, \u001b[33m14 deselected\u001b[0m\u001b[32m in 0.37s\u001b[0m\u001b[32m =======================\u001b[0m\n"
      ]
     }
    ],
    "source": [
-    "!python3 -m pytest -l -v -k \"backward\""
+    "!python3 -m pytest -l -v -s -k \"backward\""
    ]
   },
   {
