--- a/hw1/hw1.ipynb
+++ b/hw1/hw1.ipynb
@@ -1175,7 +1175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 44,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1195,7 +1195,7 @@
       "\n",
       "tests/hw1/test_autograd_hw.py \u001b[32m.\u001b[0m\u001b[32m                                          [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m23 deselected\u001b[0m\u001b[32m in 0.34s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m23 deselected\u001b[0m\u001b[32m in 0.36s\u001b[0m\u001b[32m =======================\u001b[0m\n"
      ]
     }
    ],
@@ -1234,7 +1234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 43,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1248,14 +1248,13 @@
      "output_type": "stream",
      "text": [
       "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
-      "platform darwin -- Python 3.9.7, pytest-6.2.4, py-1.10.0, pluggy-0.13.1\n",
-      "rootdir: /Users/zkolter/Dropbox/class/10-714/homework/hw1\n",
-      "plugins: pytest_check-1.0.4, anyio-2.2.0\n",
-      "collected 21 items / 20 deselected / 1 selected                                \u001b[0m\n",
+      "platform linux -- Python 3.10.13, pytest-7.4.0, pluggy-1.0.0\n",
+      "rootdir: /root/cmu-dlsys/hw1\n",
+      "collected 24 items / 23 deselected / 1 selected                                \u001b[0m\n",
       "\n",
-      "tests/test_autograd_hw.py \u001b[32m.\u001b[0m\u001b[32m                                              [100%]\u001b[0m\n",
+      "tests/hw1/test_autograd_hw.py \u001b[32m.\u001b[0m\u001b[32m                                          [100%]\u001b[0m\n",
       "\n",
-      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m20 deselected\u001b[0m\u001b[32m in 0.69s\u001b[0m\u001b[32m =======================\u001b[0m\n"
+      "\u001b[32m======================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m23 deselected\u001b[0m\u001b[32m in 0.73s\u001b[0m\u001b[32m =======================\u001b[0m\n"
      ]
     }
    ],
@@ -1296,7 +1295,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 47,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -1304,10 +1303,32 @@
     "id": "LHKC82ex9wFg",
     "outputId": "5a319557-624e-45be-e839-3e1d30efb6f5"
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[1m============================= test session starts ==============================\u001b[0m\n",
+      "platform linux -- Python 3.10.13, pytest-7.4.0, pluggy-1.0.0\n",
+      "rootdir: /root/cmu-dlsys/hw1\n",
+      "collected 24 items / 23 deselected / 1 selected                                \u001b[0m\n",
+      "\n",
+      "tests/hw1/test_autograd_hw.py \u001b[32m.\u001b[0m\u001b[32m                                          [100%]\u001b[0m\n",
+      "\n",
+      "\u001b[32m================= \u001b[32m\u001b[1m1 passed\u001b[0m, \u001b[33m23 deselected\u001b[0m\u001b[32m in 60.78s (0:01:00)\u001b[0m\u001b[32m ==================\u001b[0m\n"
+     ]
+    }
+   ],
    "source": [
     "!python3 -m pytest -l -k \"nn_epoch_ndl\""
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
